question-tooltip z-index bug fixed

--- a/less/blocks/question-tooltip.less
+++ b/less/blocks/question-tooltip.less
@@ -1,8 +1,8 @@
 .question-tooltip {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    margin-top: 2px;
+    //transform: translateY(-50%);
+    margin-top: -10px;
     margin-left: 5px;
     display: inline-block;
     text-align: left;
